correct color contrast, Add area-label property

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h2 {
   font-weight: 400;
   font-size: 18px;
   line-height: 20px;
-  color: #6070ff;
+  color: #7f8cff;
   margin-bottom: 3%;
 }
 
@@ -184,7 +184,7 @@ li img {
 
 .tech ul li {
   margin-right: 2rem;
-  background: #ebebff;
+  background: #e5e5e5;
   border-radius: 8px;
   align-items: center;
   padding: 4px 12px;
